# Advanced_CPP

./: .gitignore  CMakeLists.txt  README.md
Basics/: init.cpp  log.cpp  output
inc/: CMakeLists.txt  shapes.h
src/: CMakeLists.txt  init.cpp  shapes.cpp
utils/: CMakeLists.txt  logger.cpp
